--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "dplayer": "^1.27.1",
     "element-plus": "^2.3.14",
+    "ffmpeg": "^0.0.4",
+    "ffprobe": "^1.1.2",
+    "hls.js": "^1.4.12",
+    "mockjs": "^1.1.0",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
